resolved tec icons spacing problem

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -239,11 +239,11 @@ header{
 .tec-card{
     width: 60%;
     margin: 40px auto auto auto;
-    min-width: 400px;
     background-color: #292929;
     border-radius: 20px;
     margin-bottom: 100px;
     min-width: 275px;
+    max-width: 800px;
 }
 
 .card-title{
@@ -262,11 +262,16 @@ header{
 .tec-container{
     display: block;
     padding: 20px 0;
+    width: 100%;
+    position: relative;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
 }
 
 .item-box{
-    color: white;
     margin: 20px 20px;
+    position: relative;
     display: inline-block;
     width: 40%;
 }
@@ -280,8 +285,8 @@ header{
 .icon img{
     vertical-align: middle;
     position: relative;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: 100px;
 }
 
 .project-section{
@@ -455,7 +460,7 @@ footer{
     text-align: center;
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 845px){
     .menu{
         display: none;
     }
@@ -471,6 +476,14 @@ footer{
     .item-box{
         margin: 20px auto;
         width: 100%;
+    }
+
+    .icon{
+        padding: 20px 0;
+    }
+
+    .icon img{
+        height: 150px;
     }
 
     .project-card{
@@ -580,6 +593,14 @@ footer{
 
     .card-title h1{
         font-size: 30px;
+    }
+
+    .icon{
+        padding: 10px 0;
+    }
+
+    .icon img{
+        height: 100px;
     }
 
     .project-section .line{
